Inserindo um temporizador na rocha do iRock

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body onload="alert('Hello, eu sou o Joshua')">
     <header>
-        <h1> A Rocha Virtual de estimação! </h1>
+        <h1 id="texto"> A Rocha Virtual de estimação! </h1>
     </header>
 
     <header>
