Inserindo uma função de temporizador, setTimerout na rocha

--- a/index.html
+++ b/index.html
@@ -7,19 +7,11 @@
     <title>Projeto 1 do livro Use Acabeça</title>
     <link rel="stylesheet" type="text/css" href="css/style.css"> 
 </head>
-<body onload="alert('Hello, eu sou o Joshua')">
-    <header>
-        <h1 id="texto"> A Rocha Virtual de estimação! </h1>
-    </header>
-
-    <header>
-        <div class="logo">
-            <img onclick="sorry()" id="rockImg" src="images/rock.png">
-        </div>
-
-
-
-    </header>
+<body onload="greetUser();">
+    <div>
+        <img id="rockImg" src="images/rock.png" alt="iRock" 
+        onclick="touchRock();" />
+    </div>
 
 
 
